# recipe-recommender

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  railway.json
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: config.py  main.py  model.py
backend/app/routes/: recipes.py
backend/tests/: conftest.py  test_health.py  test_recipes.py
food-recipe-recommender/: app.py  main.py
food-recipe-recommender/src/: features.py  modeling.py  preprocessing.py  recommender.py  validation_checks.py
frontend/: biome.json  index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: RecipeCard.tsx  RecommendForm.tsx  SearchBar.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx
frontend/src/pages/: Home.tsx
