[project]
name = "recipe-recommender"
version = "0.1.0"
description = "Recipe recommendation system using Food.com dataset and K-means clustering"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "joblib",
    "wordcloud",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"food-recipe-recommender/src/*.py" = ["E501"]
