[project]
name = "recipe-recommender-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.0",
    "scikit-learn>=1.5",
    "pandas>=2.0",
    "numpy>=1.26",
    "joblib>=1.4",
]

[dependency-groups]
dev = ["ruff>=0.8", "pytest>=8.0", "httpx>=0.28"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"app/routes/*.py" = ["B008"]
